# ask-gpt-demo

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml  test.py
app/: main.py
app/api/: api.py  ask.py  routes.py
app/core/: config.py  container.py  dependencies.py  exceptions.py  otel.py  security.py
app/repository/: __init__.py  supabase_repository.py
app/schema/: api_schema.py  ask_schema.py  auth_schema.py  user_schema.py
app/services/: __init__.py  html_service.py  open_ai_service.py  supabase_service.py
tests/: test_html_service.py  test_open_ai_service.py  test_open_ai_service_mock.py
