[tool.poetry]
name = "ask-gpt-demo"
version = "0.1.0"
description = ""
authors = ["Rahmatullah Arrizal <rahmatullaharrizal@gmail.com>"]
readme = "README.md"
packages = [
    { include = "build" }
]

[tool.poetry.scripts]
start = "main:start"
test = "main:test"
test-only = "main:test_only"

[tool.poetry.dependencies]
python = "^3.9.6"
langchain = "^0.0.230"
bs4 = "^0.0.1"
openai = "^0.27.8"
fastapi = "0.93.0"
poetry-plugin-dotenv = "^0.5.0"
uvicorn = "^0.22.0"
starlette = "0.25.0"
dependency-injector = "^4.41.0"
basemodel = "^20190604.1625"
python-dotenv = "^1.0.0"
pyjwt = "^2.7.0"
tiktoken = "^0.4.0"
honeycomb-opentelemetry = "^0.2.1b0"
opentelemetry-instrumentation-fastapi = "0.38b0"
responses = "^0.23.1"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pylint = "^2.17.4"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.coverage.paths]
source = ["app"]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    # exclude files
    "app/main.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
addopts = "--cov=app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
